--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^6.4.0",
     "react-scripts": "4.0.3",
     "react-stripe-checkout": "^2.6.3",
+    "react-toastify": "^9.0.8",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0",
     "web-vitals": "^1.1.1"
