--- a/server/package.json
+++ b/server/package.json
@@ -6,16 +6,14 @@
   "engines": {
     "node": "15.7.0"
   },
-  
   "scripts": {
     "client-install": "npm install --prefix client",
     "server": "nodemon server.js",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "start": "node server.js",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+    "start": "node server.js"
   },
-  "author": "sathya",
+  "author": "kiran",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
@@ -25,5 +23,8 @@
     "router": "^1.3.5",
     "stripe": "^8.142.0",
     "uuid": "^8.3.2"
+  },
+  "devDependencies": {
+    "concurrently": "^7.4.0"
   }
 }
